working on setup and linking all sheets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,16 @@
+/* whole website */
+
+
+/* header */
 .headerOne {
   background-color: green;
+}
+
+/* body */
+.bodyMain {
+  background-color: black;
+}
+
+#intro {
+  color: white;
 }
