--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,34 @@
 /* whole website */
-
+:root {
+  --primary-color: lightblue;
+}
 
 /* header */
 .headerContainer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  background-color: blue;
+  background-color: var(--primary-color);
+  align-items: center;
 }
 
 .headerList {
   list-style-type: none;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 /* body */
 .bodyMain {
-  background-color: black;
+  background-color: lightblue;
 }
 
 #intro {
-  color: white;
+  color: black;
+}
+
+/* footer */
+.footerMain {
+  background-color: lightblue;
 }
