--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,11 @@
   flex-wrap: wrap;
   background-color: var(--primary-color);
   align-items: center;
-  border: 10px solid black;
+  border-bottom: 5px solid black;
 }
 
 .headerList {
+  display: flex;
   list-style-type: none;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -46,6 +47,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   justify-content: center;
+  border-top: 5px solid black;
 }
 
 .listFooter {
