adding in skills trees and setting up seperation of lists

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  height: 1%;
+}
+
+#skillsLeft {
+  padding-left: 25%;
+}
+
+#skillsRight {
+  padding-right: 25%;
 }
 
 #gitHub {
